<resources>
    <string name="app_name">A Easy Conference</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Contacts</string>
    <string name="nav_find_friend">Find Friends</string>

    <string name="title_activity_tools">Tools</string>

    <string name="host">192.168.2.34</string>
    <string name="port">3000</string>
    <string name="title_activity_message">Login</string>


    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Text chat fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confilm_password">Confirm Password</string>
    <string name="prompt_confilm_new_password">Confirm New Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_send_request">Send request</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_profile_view">Profile</string>
    <string name="title_activity_profile_edit">Profile Edit</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_forget_password">Reset your password</string>

    <string name="title_activity_call">CallActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="action_change_password">Change Password</string>
    <string name="action_edit">Edit Profile</string>
    <string name="action_next">Next</string>
    <string name="action_profile_view">Profile</string>
    <string name="action_un_friend">Un Friend</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_update">Update</string>
    <string name="action_chose_pro_pic">Chose Pro Pic</string>
    <string name="action_cancel">Cancel</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_middle_name">Middle Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_sex">Sex</string>
    <string name="action_forget_password">Send password reset email</string>
    <string name="audio_album">Audio Album</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="duration">Duration</string>
    <string name="add">Add to Contacts</string>
    <string name="title_activity_navigation">NavigationActivity</string>


    <string name="ok_text">OK Text</string>
    <string name="cancel_text">Cancel</string>
    <string name="app_dialog_title">Javascript</string>
    <string name="title_activity_login_success">LoginSuccessActivity</string>

    <string name="welcome_1">Welcome!</string>
    <string name="welcome_2">Feature Packed</string>
    <string name="welcome_3">Get Started Now</string>

    <string name="join_to_yo_1">Send any sized video, app, photo, or file at lightning speeds, without the Internet.</string>
    <string name="join_to_yo_2">Free yourself from expensive data costs and limits! Watch savings add up.</string>
    <string name="join_to_yo_3">Offline sharing works everywhere - at school, on the run, or on Mars.</string>
    <string name="sign_up_text_1">Sign up with your social accounts:</string>
    <string name="sign_up_text_2">Sign up with your email address</string>
    <string name="create_account">Create Account</string>
    <string name="or">Or</string>
    <string name="facebook_signin">Sign in with Facebook</string>
    <string name="google_plus_signin">Sign in with Google</string>
    <string name="linkedin_signin">Sign in with Linkedin</string>
    <string name="terms_service">By Signing up, you accept our Terms of Service</string>

    <string name="log_in_text_1">Log in with your social accounts:</string>
    <string name="log_in_text_2">Log in with your email address</string>
    <string name="Login">Log IN</string>
    <string name="forget_password">I Forgot My Password</string>
    <string name="url_generator_text">Choose your EasyConference URL. This is where people will go to see your conference and any shared documents.</string>

    <string name="welcome_conference_room">Welcome to Your Conference Room!</string>
    <string name="conference_pin">Conference : 852-216-4168 PIN: 43694</string>
    <string name="share_info">Share this info</string>
    <string name="conference_info_text">People can connect to your conference at any time, using the info below</string>

    <string name="conference_url">Conference URL</string>
    <string name="conference_url_name">uberconference.com/rasel</string>
    <string name="conference_number_title">Conference Number</string>
    <string name="conference_number">857-216-4168</string>
    <string name="pin_number_title">Pin</string>
    <string name="pin_number">43694</string>

    <string name="cancle">cancle</string>
    <string name="next">Next</string>
    <string name="cname">Conference name (optional)</string>
    <string name="people_to_invite">People to invite</string>
    <string name="from">From</string>
</resources>
