<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context="io.left.easyconference.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_above="@+id/footer">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:background="@drawable/your_conference"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conference_info_text"
                android:textAlignment="center"
                android:textSize="13sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/light_grey"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conference_url"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conference_url_name"
                android:gravity="center"
                android:textSize="13sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conference_number_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conference_number"
                android:gravity="center"
                android:textSize="13sp"
                android:layout_marginBottom="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_number_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_number"
                android:gravity="center"
                android:textSize="13sp"
                android:layout_marginBottom="20dp"/>



            <Button
                android:id="@+id/logInButton"
                android:layout_alignParentRight="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
               android:layout_marginTop="15dp"
                android:background="@drawable/create_account_button_shape"
                android:textAllCaps="true"
                android:text="@string/share_info"
                android:textColor="@color/white"/>



        </LinearLayout>


    </ScrollView>

</RelativeLayout>