<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in_text_1"
                android:gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/btn_wrapper_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:layout_marginTop="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:clickable="true">


                <Button
                    android:id="@+id/btn_googlePlus"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/google_plus_signin"
                    android:padding="0dp"
                    android:textAllCaps="true"
                    android:textSize="14dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/ripple_google_plus" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_wrapper_linkdin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:layout_marginTop="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:clickable="true">


                <Button
                    android:id="@+id/btn_linkdin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/linkedin_signin"
                    android:padding="0dp"
                    android:textAllCaps="true"
                    android:textSize="14dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/ripple_linkedin" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_wrapper_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:clickable="true">


                <Button
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/facebook_signin"
                    android:padding="8dp"
                    android:textAllCaps="true"
                    android:textSize="14dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/ripple_fb" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <View
                    android:id="@+id/divider1"
                    android:layout_width="160dp"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/grey" />

                <TextView
                    android:id="@+id/textOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/divider1"
                    android:layout_toEndOf="@id/divider1"
                    android:textAllCaps="false" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="160dp"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/grey"
                    android:layout_toRightOf="@id/textOr"
                    android:layout_toEndOf="@id/textOr" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in_text_2"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFCC00" />


            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:paddingLeft="0dp"
                android:paddingTop="10dp"
                android:textColorHint="#999"
                android:hint="@string/prompt_username"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:lines="1" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:paddingLeft="0dp"
                android:paddingTop="10dp"
                android:textColorHint="#999"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:lines="1" />

            <TextView
                android:id="@+id/textViewForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                android:textColor="@color/dark_blue"
                android:text="Forgot Password"
                android:textSize="14sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <Button
                android:id="@+id/btn_signin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:text="Log in"
                android:background="@drawable/selector_xml_btn_yellow"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_signin1"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:text="Log in"
                android:background="@drawable/selector_xml_btn_yellow"
                android:textStyle="bold"
                android:visibility="gone"/>


        </LinearLayout>



    </ScrollView>

</LinearLayout>
