<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context="io.left.easyconference.MainActivity">

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:paddingTop="10dp"
            android:paddingBottom="30dp">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/create_account_button_shape"
                android:textAllCaps="true"
                android:text="Start Now"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/logInButton"
                android:layout_alignParentRight="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_below="@+id/signUpButton"
                android:background="@drawable/create_account_button_shape"
                android:textAllCaps="true"
                android:text="Schedule"
                android:textColor="@color/white"/>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_above="@+id/footer">

        <AnalogClock
            android:id="@+id/analog_clock"
            android:dial="@drawable/clock_dial"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_conference_room"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conference_pin"
            android:textColor="@color/deep_gray"
            android:textSize="13sp"
            android:gravity="center"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/share_info"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/dark_blue"/>

    </RelativeLayout>

</RelativeLayout>