<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_black">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:src="@drawable/cross" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@color/transparent"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:text="@string/cancle"
                android:textStyle="bold"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/light_grey" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:src="@drawable/arrow" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@color/transparent"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:text="@string/next"
                android:textStyle="bold"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/button_row">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/cname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/cname"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="14sp"
                android:paddingTop="8dp"
                android:theme="@style/AppBaseTheme"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp">

        <EditText
            android:id="@+id/people_invite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_weight="1"
            android:hint="@string/people_to_invite"
            android:imeOptions="actionNext"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="14sp"
            android:paddingTop="8dp"
            android:theme="@style/AppBaseTheme"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="From"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">


            


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>